Bug #27757 Tup scan cant see own records
Submitted: 11 Apr 2007 16:54 Modified: 17 Apr 2007 13:16
Reporter: Jonas Oreland
Status: Closed
Category:Server: ClusterDD Severity:S3 (Non-critical)
Version:5.1 OS:Any
Assigned to: Jonas Oreland Target Version:

[11 Apr 2007 16:54] Jonas Oreland
Description:
Problem is two fold:

1) There is a bug in tup-scan causing it to completely skip "alloc" rows
   This is a 1-liner to fix

2) For DD scan, the data will not have been written to disk.
   This seems very hard to fix.
   Short term solution is to disable disk-scan

How to repeat:
create table t1 (a int primary key, b int not null) storage disk engine = ndb;
begin;
insert into t1 values (1,1);
select * from t1;
[12 Apr 2007 7:00] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/24350

ChangeSet@1.2457, 2007-04-12 06:59:56+02:00, jonas@perch.ndb.mysql.com +1 -0
  ndb - bug#27757
    tupscan misses uncommitted inserts by own transaction
      let tupkeyreq handle dirty/savepoint
  
    also siable diskscan as temporary fix for bug#27776
[12 Apr 2007 7:19] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/24351

ChangeSet@1.2458, 2007-04-12 07:19:10+02:00, jonas@perch.ndb.mysql.com +2 -0
  ndb - mysql-test-run testcase for bug#27757
[12 Apr 2007 9:12] Jonas Oreland
pushed to 51-ndb, 51-telco & telco-6.1
[15 Apr 2007 18:48] Bugs System
Pushed into 5.1.18-beta
[17 Apr 2007 13:16] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix in 5.1.18 and telco-6.1.6 changelogs.
[17 Apr 2007 13:37] Jon Stephens
Changed category to Cluster:DiskData.